--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Contoso Sample Web Chat</title>
+    <title>RPAiaD Chatbot</title>
     <!-- This styling is for the canvas demonstration purposes. It is recommended
     that style is moved to separate file for organization in larger projects -->
     <style>
